Additional changes in functionality

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
         <div class="filters">
             <label for="filter-name">Filter by Name:</label>
             <input type="text" placeholder="Enter team name." id="filter-name">
+            <button id="filter-btn">Filter</button>
 
             <label for="sort-select">Sort By:</label>
             <select id="sort-select">
                 <option value="name">Name</option>
-                <option value="established">Establishment Year</option>
+                <option value="founded">Year Founded</option>
             </select>
         </div>
         <div id="teams-list"></div>
